--- a/src/main/webapp/WEB-INF/finedb/db.properties
+++ b/src/main/webapp/WEB-INF/finedb/db.properties
@@ -1,10 +1,10 @@
 #HSQL Database Engine 1.8.1.3
-#Tue Nov 12 17:24:58 CST 2019
+#Fri Nov 15 17:33:26 CST 2019
 hsqldb.applog=0
 hsqldb.cache_file_scale=8
 runtime.gc_interval=0
 version=1.8.1
-modified=no
+modified=yes
 hsqldb.script_format=0
 hsqldb.incremental_backup=false
 hsqldb.cache_size_scale=8
